<resources>
    <string name="app_name">Notify</string>
    <string name="page_title">Notify</string>
    <string name="more">More</string>
    <string name="content_description_more">This is the navigation drawer option</string>
    <string name="search">Search</string>
    <string name="content_description_search">This is search icon</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="title">Milton Kumar Kundu</string>
    <string name="icon_todo">TODO</string>
    <string name="post">Create Post</string>
    <string name="content_description_media">image_post</string>
    <string name="secondary_text">Electrical Machine II </string>
    <string name="supporting_text">Dear,\nSome of you have commented and messaged me regarding a mathematical problem. The correct answer</string>
    <string name="action_1">react</string>
    <string name="action_2">comment</string>
    <string name="reminder">reminder</string>
    <string name="speakout">speakout</string>
    <string name="raw_post">Raw Post</string>
    <string name="dot"> . </string>
    <string name="post_time">1 hour ago</string>
    <string name="seen_by">seen by 45</string>
    <string name="deadline">3 Jul</string>
    <string name="time_text">02 : 15</string>
    <string name="text">Text</string>
    <string name="voice">Voice</string>
    <string name="label">Course Title</string>
    <string name="name_of_dept"><![CDATA[Dept. of Electrical & Computer Engineering]]></string>
    <string name="name_of_university"><![CDATA[Rajshahi University of Engineering & Technology]]></string>
    <string name="email">mk1234@gmail.com</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="notification_text">Milton Kumar Kundu posted a notice on Electrical Machine II</string>
    <string name="notification_time_text">1 min ago</string>
    <string name="notification_page_title">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_text">Notify Something...</string>
    <string name="example">This is autofill text</string>
    <string name="post_audience">Post Audience</string>
    <string name="who_can_see_post">Who can see your notice?</string>
    <string name="text_answer">Your notice will show up in the news feed of your target  audience. You can add as much audience as you want.</string>
    <string name="audience_txt">Audience</string>
    <string name="create_account">Create Account</string>
    <string name="post_sub">Post Subject</string>
    <string name="subjet_txt_hint">Who can see your notice?</string>
    <string name="text_sub_answer">Your notice will show up in the news feed of your target  audience. You can add as much audience as you want.</string>
    <string name="student_id">Student ID</string>
    <string name="dialog_message">Do you want to discard post?</string>
    <string name="date_hint">day/month/year</string>
    <string name="time_hint">hour:min</string>
    <string name="post_deadline">Post Deadline</string>
    <string name="deadline_help_question">Why you need set deadline?</string>
    <string name="deadline_sub_answer">You can set dealine time of the task of the notice. Your audience will find it helpful.</string>
    <string name="faculty_name">Faculty</string>
    <string name="dept_name">Department</string>
    <string name="option_1">All</string>
    <string name="option_2">ECE</string>
    <string name="option_3">CE</string>
    <string name="option_4">ME</string>
    <string name="fac_option_1">ALL</string>
    <string name="fac_option_2">ECE</string>
    <string name="fac_option_3">CE</string>
    <string name="fac_option_4">ME</string>
    <string name="dept_option_1">ALL</string>
    <string name="dept_option_2">ECE</string>
    <string name="dept_option_3">CSE</string>
    <string name="dept_option_4">EEE</string>
    <string name="dept_option_5">ETE</string>
    <string name="dept_option_6">CE</string>
    <string name="dept_option_7">BECM</string>
    <string name="dept_option_8">URP</string>
    <string name="dept_option_9">Arch</string>
    <string name="dept_option_10">ME</string>
    <string name="dept_option_11">IPE</string>
    <string name="dept_option_12">MTE</string>
    <string name="dept_option_13">GCE</string>
    <string name="dept_option_14">MSE</string>
    <string name="dept_option_15">CFPE</string>
    <string name="series_option_1">ALL</string>
    <string name="series_option_2">14</string>
    <string name="series_option_3">15</string>
    <string name="series_option_4">16</string>
    <string name="series_option_5">17</string>
    <string name="series_option_6">18</string>
    <string name="series_option_7">19</string>
    <string name="series_option_8">20</string>
    <string name="section_option_1">ALL</string>
    <string name="section_option_2">A</string>
    <string name="section_option_3">B</string>
    <string name="section_option_4">C</string>
    <string name="faculty_hint">Faculty</string>
    <string name="series_hint">Series</string>
    <string name="dept_hint">Department</string>
    <string name="section_hint">Section</string>
    <string name="add_audience">Add Audience</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="teacher_id">Teacher Id</string>
    <string name="designation_hint">Designation</string>
    <string name="department_hint">Department</string>
    <string name="verification_code_hint">Verification Code</string>
    <string name="post_details">Post</string>
    <string name="write_a_notice">Write a notice...</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Search">Search</string>
    <string name="trySearch">Try searching for</string>
    <string name="subject">- Subject</string>
    <string name="noticeText">- Notice text</string>
    <string name="sign_up_as_student">Sign Up as Student</string>
    <string name="menuTopAppBar">Menu Top App Bar</string>
    <string name="end_of_results">End of Results</string>
    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="year">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
    </string-array>
    <string-array name="hour">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="minute">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string-array name="department">
        <item>EEE</item>
        <item>CSE</item>
        <item>ECE</item>
        <item>ME</item>
        <item>CE</item>
        <item>ETE</item>
        <item>MTE</item>
        <item>GCE</item>
        <item>CFPE</item>
        <item>Arch</item>
        <item>BECM</item>
        <item>MSE</item>
    </string-array>
    <string-array name="faculty">
        <item>ECE</item>
        <item>ME</item>
        <item>CE</item>
    </string-array>
    <string-array name="section">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="batch">
        <item>160</item>
        <item>161</item>
        <item>162</item>
        <item>163</item>
        <item>164</item>
        <item>165</item>
        <item>166</item>
        <item>167</item>
        <item>168</item>
        <item>169</item>
        <item>170</item>
        <item>171</item>
        <item>172</item>
        <item>173</item>
        <item>174</item>
        <item>175</item>
        <item>176</item>
        <item>177</item>
        <item>178</item>
        <item>179</item>
        <item>180</item>
        <item>181</item>
        <item>182</item>
        <item>183</item>
        <item>184</item>
        <item>185</item>
        <item>186</item>
        <item>187</item>
        <item>188</item>
        <item>189</item>
        <item>190</item>
        <item>191</item>
        <item>192</item>
        <item>193</item>
        <item>194</item>
        <item>195</item>
        <item>196</item>
        <item>197</item>
        <item>198</item>
        <item>199</item>
    </string-array>
    <string-array name="designation">
        <item>Professor</item>
        <item>Associate Professor</item>
        <item>Assistant Professor</item>
        <item>Lecturer</item>
    </string-array>
    <string name="title_activity_splash_screen">SplashScreen</string>
</resources>