<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/option_1"
        android:title="@string/series_option_1" />
    <item android:id="@+id/option_2"
        android:title="@string/series_option_2" />
    <item android:id="@+id/option_3"
        android:title="@string/series_option_3" />
    <item android:id="@+id/option_4"
        android:title="@string/series_option_4" />
    <item android:id="@+id/option_5"
        android:title="@string/series_option_5" />
    <item android:id="@+id/option_6"
        android:title="@string/series_option_6" />
    <item android:id="@+id/option_7"
        android:title="@string/series_option_7" />
    <item android:id="@+id/option_8"
        android:title="@string/series_option_8" />

</menu>