<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:contentDescription="@string/content_description_more"
        android:enabled="true"
        android:icon="@drawable/home_white"
        android:iconTint="@color/black"
        android:title="@string/home"
        app:showAsAction="withText" />

    <item
        android:id="@+id/calendar"
        android:title="@string/calendar"
        android:enabled="true"
        android:iconTint="@color/white"
        android:icon="@drawable/calendar_icon_white"
        android:contentDescription="@string/content_description_more"
        />
    <item
        android:id="@+id/post"
        android:contentDescription="@string/content_description_search"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/notification"
        android:icon="@drawable/notification_icon_white"
        android:title="@string/notification"
        android:enabled="true"
        android:iconTint="@color/white"
        android:contentDescription="@string/content_description_search"
        />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/user_icon_white"
        android:enabled="true"
        android:iconTint="@color/white"
        android:contentDescription="@string/content_description_more"

        />


</menu>