<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout"
    android:orientation="vertical"
    android:weightSum="29"
    xmlns:app="http://schemas.android.com/apk/res-auto">



        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile_pic"
            android:layout_width="188dp"
            android:layout_height="188dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="#009E7575"
            android:elevation="8dp"
            android:translationZ="5dp"
            app:civ_border_color="#68B2EA"
            app:civ_border_width="10dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#404042"
            app:civ_shadow_radius="1.5dp"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="bottom"
            android:text="Milton Kumar Kundu"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="Assistant Professor"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/name_of_dept"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/name_of_university"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/user_email"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:clickable="false"
            android:text="@string/email"
            android:textAllCaps="false"
            app:icon="@drawable/envalop_icon" />
<!--
        <com.google.android.material.button.MaterialButton
            android:id="@+id/textButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_weight="13"
            android:text="@string/edit"
            android:textAllCaps="false"
            app:icon="@drawable/pen_icon" />
-->
        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:background="@drawable/logout_btn_shape"
            android:backgroundTint="#2BB7F8"
            android:gravity="center"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textSize="20dp" />

</LinearLayout>


