<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_post"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    tools:context=".post">



    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:liftOnScroll="false">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Notify"
            android:textAlignment="center"
            app:navigationIcon="@drawable/back_arrow_icon"
            app:title="@string/post_deadline"
            app:titleMarginTop="0dp"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
            app:titleTextColor="#FFFFFF"
            android:gravity="center_horizontal">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deadline_help_question"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deadline_sub_answer"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeErrorColor="#E82F2F"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconDrawable="@drawable/calendar_icon"
            android:hint="@string/date_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/hint"
                android:gravity="left"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeErrorColor="#E82F2F"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconDrawable="@drawable/time_icon"
            android:hint="@string/time_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/hint"
                android:gravity="left"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="Done"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:layout_marginTop="50dp"
            android:background="@drawable/done_button_shape"
            android:backgroundTint="@color/purple_500"
            />


    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>