<com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    app:cardElevation="1dp"
    android:translationZ="2dp"
    app:strokeWidth="0.2dp"
    app:strokeColor="@color/back_button"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true">

    <!--
        android:elevation="1dp"
        android:translationZ="3dp"
     -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="8"
                android:orientation="horizontal">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/post_owner_pic"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/profile"
                    app:civ_border_color="#3f51b5"
                    android:layout_weight="1"
                    app:civ_border_width="1dp"
                    app:civ_shadow="true"
                    android:clickable="true"
                    app:civ_shadow_radius="0.5dp"
                    app:civ_shadow_color="#3f51b5"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="6"
    android:orientation="vertical">
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginLeft="5dp"
                android:textSize="15dp"
                android:textColor="#48464A"
                android:clickable="true"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondary_text"
            android:textSize="13dp"
            android:textColor="#48464A"
            android:textAppearance="?attr/textAppearanceBody2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:layout_marginTop="-4dp"
            android:textAlignment="center"
            android:textSize="13dp"
            android:textColor="#48464A"
            android:textAppearance="?attr/textAppearanceBody2"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_time"
            android:textSize="13dp"
            android:textColor="#48464A"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>

</LinearLayout>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    app:textStartPadding="-2dp"
                    app:textEndPadding="-2dp"
                    app:iconStartPadding="3dp"
                    app:chipMinHeight="15dp"
                    app:chipIconSize="10dp"
                    app:chipIconTint="#EE0000"
                    app:chipStrokeWidth="1dp"
                    app:chipStrokeColor="#EE0000"
                    app:chipBackgroundColor="#FFFFFF"
                    android:layout_weight="1"
                    app:closeIconEnabled="false"
                    app:chipCornerRadius="13dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    app:chipIcon="@drawable/deadline_icon"
                    android:textColor="#EE0000"
                    android:layout_marginTop="-10dp"
                    android:checkable="true"
                    style="@style/ChipCustomStyle"
                    android:text="@string/deadline"/>
            </LinearLayout>

            <TextView
                android:id="@+id/post_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:clickable="true"
                android:text="@string/supporting_text"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="#48464A"
                />



        </LinearLayout>
        <!-- Media -->
        <ImageView
            android:id="@+id/post_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/media"
            android:scaleType="fitXY"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_media"
            />


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:dividerThickness="0.8dp"
            app:dividerColor="#B6B4B4" />


        <!-- Buttons -->




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                style="?attr/borderlessButtonStyle"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:icon="@drawable/like_icon"
                app:iconTint="#605E61"
                android:text="Like"
                android:textAlignment="textStart"
                app:iconPadding="20dp"
                android:textAllCaps="false"
                android:textColor="#605E61"
                app:rippleColor="#E91E63"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"/>

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:icon="@drawable/comment_icon"
                app:iconTint="#605E61"
                android:text="Comment"
                android:textAllCaps="false"
                android:textColor="#605E61"
                android:clickable="true"
                android:focusable="true"/>


            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:icon="@drawable/alarm_black"
                app:iconTint="#605E61"
                android:text="Reminder"
                android:textAllCaps="false"
                android:textColor="#605E61"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>





    </LinearLayout>

</com.google.android.material.card.MaterialCardView>